# TOONIFY

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
bindings/node/: Cargo.toml  index.d.ts  index.js  package.json
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/src/: lib.rs
crates/toonify-cli/: Cargo.toml
crates/toonify-cli/src/: main.rs
crates/toonify-cli/tests/: cli.rs
crates/toonify-core/: Cargo.toml
crates/toonify-core/src/: decoder.rs  encoder.rs  error.rs  input.rs  lib.rs  options.rs  quoting.rs  tokens.rs  validator.rs
crates/toonify-core/tests/: json_to_toon.rs
crates/toonifytool-cli/: Cargo.toml
crates/toonifytool-cli/src/: main.rs
crates/toonifytool-cli/tests/: cli.rs
test-files/JSONtoTOON/JSONs/: groups_with_tabular.json  list_objects.json  td.json
test-files/JSONtoTOON/TOONs_correct/: groups_with_tabular.toon  list_objects.toon  td.toon
test-files/JSONtoTOON/TOONs_outputted/: td.toon
test-files/validator/: invalid_row_count.toon
