[workspace]
members = [
  "crates/toonify-core",
  "crates/toonifytool-cli",
  "bindings/node",
  "bindings/python"
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["Andrea Iannoli"]

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
indexmap = "2.2"
once_cell = "1.19"
tiktoken-rs = "0.5"
