[package]
name = "toonify-cli"
version = "0.1.0"
edition = "2021"
authors = ["Toonify Contributors"]
description = "Command line interface for TOON conversions"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
serde_json = { workspace = true }
toonify-core = { path = "../toonify-core" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
