[package]
name = "toonify-core"
version = "0.1.0"
edition = "2021"
authors = ["Toonify Contributors"]
description = "Core library for converting structured data formats into the TOON serialization"
license = "MIT"

[lib]
name = "toonify_core"
path = "src/lib.rs"

[dependencies]
bigdecimal = "0.4"
csv = "1.3"
indexmap = "2.2"
quick-xml = { version = "0.31", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"
thiserror = "1.0"
unicode-segmentation = "1.11"
xmltree = "0.10"
