[package]
name = "toonifytool-cli"
version = "1.0.0"
edition = "2021"
authors = ["Andrea Iannoli"]
description = "Command line interface for TOON conversions"
license = "MIT"

[[bin]]
name = "toonify"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
serde_json = { workspace = true }
toonify-core = { path = "../toonify-core", version = "1.0.0" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
